--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -41,9 +41,9 @@ html {
 
 /*   Mid section   */
 .app-name {
-	font-size: 50px;
+	font-size: 3.125rem;
   font-family: 'Fjalla One', sans-serif;
-  margin: 2.5em 0px 2.5em 0px;
+  margin: 2.5em 0;
 	color: #393A4A;
 }
 
@@ -62,26 +62,8 @@ html {
     0 8px 10px -5px rgba(0, 0, 0, 0.2);
 }
 
-.top-middle-img{
-	height: 300px;
-	width: 400px;
-	margin: 20px;
-	-webkit-filter: opacity(.9); /* Safari 6.0 - 9.0 */
-		filter: opacity(.9);
-	border-radius: 6px;
-	box-shadow:
-		0 16px 38px -12px rgba(0, 0, 0, 0.56),
-		0 4px 25px 0px rgba(0, 0, 0, 0.12),
-		0 8px 10px -5px rgba(0, 0, 0, 0.2);
-}
-
 .container-fluid {
 	background-color: #393A4A;
-	padding: 2.5em 7em 5em 7em;
-}
-
-.col {
-	margin: 20px;
 }
 
 .point-title {
